--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "express": "^4.21.1",
     "express-mongo-sanitize": "^2.2.0",
     "helmet": "^8.0.0",
@@ -20,6 +22,8 @@
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.16",
+    "validator": "^13.12.0",
     "xss-clean": "^0.1.4"
   }
 }
