--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mshena",
+  "name": "chat",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -14,6 +14,8 @@
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.53.2",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
     "sass": "^1.77.4"
