--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^8.8.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
+    "socket.io": "^4.8.1",
     "validator": "^13.12.0",
     "xss-clean": "^0.1.4"
   }
