--- a/client/package.json
+++ b/client/package.json
@@ -11,14 +11,17 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "i": "^0.3.7",
     "js-cookie": "^3.0.5",
+    "npm": "^10.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
-    "sass": "^1.77.4"
+    "sass": "^1.77.4",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
