--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "classnames": "^2.5.1",
     "i": "^0.3.7",
     "js-cookie": "^3.0.5",
     "npm": "^10.9.0",
